# cassouscript

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  makefile
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
source/constants/: Keyword.cpp  Keyword.hpp
source/structures/: Context.cpp  Context.hpp  Error.cpp  Error.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  ParseResult.cpp  ParseResult.hpp  Parser.cpp  Parser.hpp  Position.cpp  Position.hpp  RTResult.cpp  RTResult.hpp  SymbolTable.cpp  SymbolTable.hpp  Token.cpp  Token.hpp
source/structures/interpreter/: BaseFunction.cpp  BaseFunction.hpp  Boolean.cpp  Boolean.hpp  BuiltInFunction.cpp  BuiltInFunction.hpp  Function.cpp  Function.hpp  List.cpp  List.hpp  Map.cpp  Map.hpp  Null.cpp  Null.hpp  Number.cpp  Number.hpp  String.cpp  String.hpp  Value.cpp  Value.hpp
source/structures/nodes/: AccessNode.cpp  AccessNode.hpp  BinaryOpAssignNode.cpp  BinaryOpAssignNode.hpp  BinaryOpNode.cpp  BinaryOpNode.hpp  BooleanNode.cpp  BooleanNode.hpp  BreakNode.cpp  BreakNode.hpp  CallNode.cpp  CallNode.hpp  ContinueNode.cpp  ContinueNode.hpp  ForNode.cpp  ForNode.hpp  FuncDefNode.cpp  FuncDefNode.hpp  IfNode.cpp  IfNode.hpp  ListNode.cpp  ListNode.hpp  MapNode.cpp  MapNode.hpp  Node.cpp  Node.hpp  NullNode.cpp  NullNode.hpp  NumListNode.cpp  NumListNode.hpp  NumberNode.cpp  NumberNode.hpp  ReturnNode.cpp  ReturnNode.hpp  StringNode.cpp  StringNode.hpp  UnaryOpAssignNode.cpp  UnaryOpAssignNode.hpp  UnaryOpNode.cpp  UnaryOpNode.hpp  (+8 more)
source/util/: color.cpp  color.hpp  terminal.cpp  terminal.hpp
test/: CMakeLists.txt
test/source/: CassouScript_test.cpp
